# Cproject

./: CMakeLists.txt  Makefile  README.md  run_tests.sh
.github/workflows/: build.yml  buildtestccpp.yml  main.yml  secscan.yml
src/: main.cpp  math.h
tests/: test.cpp
